updated javascript and css to reflect a functional forecast with phony data

--- a/index.html
+++ b/index.html
@@ -45,15 +45,7 @@
             <div class="weather-app-metric"> °F </div>
         </div>
       </main>
-      <div class="weather-forecast">
-      <div class="row">
-      <div class="col-2">
-        <div class="forecast-date">Thursday</div>
-      <img src="https://as1.ftcdn.net/v2/jpg/02/10/18/30/1000_F_210183011_6LTcjrqlbVVKmkzRdx5z6j55GgKl82N5.jpg" alt="" width="36px">
-      </div>
-      <div class="forecast-temperature"> 18 12</div>
-      </div>
-      </div>
+        <div class="weather-forecast" id="forecast"></div>
       <footer>
         Built by
         <a href="https://github.com/kaydee-codes" target="_blank"> Kaydee </a> ,
